@@ -1,5 +1,9 @@
 2007-05-03  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rb_cairo_path.c
+	(Cairo::Path#size, Cairo::Path#length, Cairo::Path#empty?): added.
+	(Cairo::Path#[]): supported negative index.
+
 	* src/rb_cairo_path.c (Cairo::PathData#each): added.
 
 	* src/rb_cairo.h, src/rb_cairo_path.c: added Cairo::Point and
